src/main/webapp/css/mainpage.css
footer {
    text-align: center;
    padding-bottom: 30px;
}

#footer-logos {
    padding-bottom: 20px;
}

#contact, #about {
    padding-top: 50px;
    padding-bottom: 50px;
}
#additional,#search {
    padding-top: 0px;
    padding-bottom: 0px;
}
#footer-logos > a > img {
    height: 70px;
    margin-right: 25px;
    border: 0;
}

#footer-logos > a > img + .tooltip > .tooltip-inner {
    background-color: #222222;;
    font-size: 14px;
    color: #FFFFFF;
}

#footer-logos > a > img + .tooltip.bottom > .tooltip-arrow {
    border-bottom: 5px solid #222222;
}

.back-to-top {
    display: inline-block;
    height: 40px;
    width: 40px;
    position: fixed;
    bottom: 40px;
    right: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
    /* image replacement properties */
    overflow: hidden;
    text-indent: 100%;
    white-space: nowrap;
    background:  rgba(232, 98, 86, 0.8) url(../img/cd-top-arrow.svg) no-repeat center 50%;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity .3s 0s, visibility 0s .3s;
    -moz-transition: opacity .3s 0s, visibility 0s .3s;
    transition: opacity .3s 0s, visibility 0s .3s;
}

.back-to-top.cd-is-visible, .back-to-top.cd-fade-out, .no-touch .back-to-top:hover {
    -webkit-transition: opacity .3s 0s, visibility 0s 0s;
    -moz-transition: opacity .3s 0s, visibility 0s 0s;
    transition: opacity .3s 0s, visibility 0s 0s;
}

.back-to-top.cd-is-visible {
    /* the button becomes visible */
    visibility: visible;
    opacity: 1;
}

.back-to-top.cd-fade-out {
    /* if the user keeps scrolling down, the button is out of focus and becomes less visible */
    opacity: .5;
}

.no-touch .back-to-top:hover {
    background-color: #e86256;
    opacity: 1;
}

@media only screen and (min-width: 768px) {
    .back-to-top {
        right: 20px;
        bottom: 20px;
    }
}

@media only screen and (min-width: 1024px) {
    .back-to-top {
        height: 60px;
        width: 60px;
        right: 14px;
        bottom: 30px;
    }
}
.news-button {
    color: #ee4b28;
    border: 1px solid #ed431f;
    padding: 10px;
    border-radius: 9px;
    margin-right: 15px;
    display: inline-block;
    font-size: 16px;
}
.news-button:hover {
    color: #FFF;
    background-color: #F05F40;
}
.news-button:active {
    color: #FFF;
    background-color: #F05F40;
}
.header-collection {
    font-weight: 600;
    color: #222222;
}
.search-map {
    margin-top: 10px;
}
.navbar-collapse.in {
    max-height: none;
}
.input-group .form-control {
    margin: 0px !important;
}
.navbar-default.affix .navbar-header #header-search{
    display:block;
}
#header-search {
    display:none;
}
.navbar-default .navbar-form {
    border-color:white;
}
#button-extended-search {
    font-size:16px;
    color:white;
    text-decoration: none;
    font-weight: 700;
    text-transform: uppercase;
    padding:6px 12px;
    display:inline-block;
}
.ul-square{
    list-style-type:square;
}

/*search navigation tab*/
@media screen and (min-width : 0px) and (max-width : 362px) {
    .navbar-brand {
        font-size: 11px;
    }
}
@media screen and (min-width : 363px) and (max-width : 439px) {
    .navbar-brand {
        font-size: 14px;
    }
}
.nav-tabs> li> a {
    color: #333333;
    font-weight: 500;
    outline:none;
}
.nav-tabs> li.active> a,
.nav-tabs> li> a:focus,
.nav-tabs> li> a:hover {
    color: #eb3812;
}
.nav-tabs> li {
    display:inline-block;
    float:none;
    *display:inline;
    zoom:1;
}
.nav-tabs {
    text-align:center;
}
/* badge */
.badge-info {
    position:relative;
    top: -18px;
    left: -10px;
}

/* map checkbox */
.checkbox label:after,
.radio label:after {
    content: '';
    display: table;
    clear: both;
}

.search-heading {
    padding-left: 15px;
    padding-right: 15px;
}

.checkbox .cr,
.radio .cr {
    position: relative;
    display: inline-block;
    border: 1px solid #a9a9a9;
    border-radius: .25em;
    width: 1.3em;
    height: 1.3em;
    float: left;
    margin-right: .5em;
}
.checkbox label, .radio label {
    padding-left: 15px;
}
.radio .cr {
    border-radius: 50%;
}

.checkbox .cr .cr-icon,
.radio .cr .cr-icon {
    position: absolute;
    font-size: .8em;
    line-height: 0;
    top: 50%;
    left: 20%;
}

.radio .cr .cr-icon {
    margin-left: 0.04em;
}

.checkbox label input[type="checkbox"],
.radio label input[type="radio"] {
    display: none;
}

.checkbox label input[type="checkbox"] + .cr > .cr-icon,
.radio label input[type="radio"] + .cr > .cr-icon {
    transform: scale(3) rotateZ(-20deg);
    opacity: 0;
    transition: all .3s ease-in;
}

.checkbox label input[type="checkbox"]:checked + .cr > .cr-icon,
.radio label input[type="radio"]:checked + .cr > .cr-icon {
    transform: scale(1) rotateZ(0deg);
    opacity: 1;
}

.checkbox label input[type="checkbox"]:disabled + .cr,
.radio label input[type="radio"]:disabled + .cr {
    opacity: .5;
}

/* pagination */
.pagination > li > a,
.pagination > li > span {
    color: #F05F40;
}
.pagination > .active > a,
.pagination > .active > a:focus,
.pagination > .active > a:hover,
.pagination > .active > span,
.pagination > .active > span:focus,
.pagination > .active > span:hover {
    color: white;
    background-color: #ee4b28;
    border-color: #ed431f;
}
.pagination > .disabled > a,
.pagination > .disabled > a:focus,
.pagination > .disabled > a:hover,
.pagination > .disabled > span,
.pagination > .disabled > span:focus,
.pagination > .disabled > span:hover
.pagination > li > a,
.pagination > li > span {
  color: #F05F40;
}
.pagination > li > a:focus,
.pagination > li > a:hover,
.pagination > li > span:focus,
.pagination > li > span:hover {
    color: #eb3812;

}
/* search table*/

.thead-default th {
    background-color: #eceeef;
    color:#464a4c;
}
#table-search td {
    color: #292b2c;
}
#table-search td:first-child {
    font-weight:700;
}

#table-search tr > th > a {
    color:#464a4c;
}
#table-search tr > td > a {
    color:#eb3812;
}
#table-search tr > td > a:hover {
    color:#FF2F00;
}

